@@ -1342,6 +1342,7 @@ WIDGET_DEFAULT = {
         "show_time_gap_sign": False,
         "time_gap_decimal_places": 1,
         "time_gap_width": 4,
+        "time_gap_align_center": False,
         "font_color_time_gap": "#FFFFFF",
         "bkg_color_time_gap": "#222222",
         "font_color_player_time_gap": "#000000",
@@ -1535,6 +1536,7 @@ WIDGET_DEFAULT = {
         "show_time_interval": True,
         "time_interval_decimal_places": 3,
         "time_interval_width": 7,
+        "time_interval_align_center": False,
         "font_color_time_interval_ahead": "#66FF00",
         "bkg_color_time_interval_ahead": "#222222",
         "font_color_time_interval_behind": "#FF6600",
