@@ -470,7 +470,11 @@ class Realtime(Overlay):
         """Time interval"""
         if target.last != data:
             target.last = data
-            target.setText(self.int_to_next(data[0], data[1])[:self.int_width].strip(".").rjust(self.int_width))
+            if self.wcfg["time_interval_align_center"]:
+                text = self.int_to_next(data[0], data[1])[:self.int_width].strip(".")
+            else:
+                text = self.int_to_next(data[0], data[1])[:self.int_width].strip(".").rjust(self.int_width)
+            target.setText(text)
             target.setStyleSheet(self.bar_style_int[data[1]])
             self.toggle_visibility(target, data[-1])
 
@@ -570,14 +574,14 @@ class Realtime(Overlay):
             return f"PIT{pit_time: >5.1f}"[:8] if pit_time > 0 else "-:--.---"
         if laptime_last <= 0:
             return f"OUT{pit_time: >5.1f}"[:8] if pit_time > 0 else "-:--.---"
-        return calc.sec2laptime_full(laptime_last)[:8].rjust(8)
+        return calc.sec2laptime_full(laptime_last)[:8]
 
     @staticmethod
     def set_best_laptime(laptime_best):
         """Set best lap time"""
         if laptime_best <= 0:
             return "-:--.---"
-        return calc.sec2laptime_full(laptime_best)[:8].rjust(8)
+        return calc.sec2laptime_full(laptime_best)[:8]
 
     def int_to_next(self, gap_behind_class, is_ahead):
         """Interval to next"""
